# T3.1

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  commands.py  config.json  dashboard.model  diagram.json  docker-compose.yaml  ecosystem.config.js  fetch.py  pyproject.toml  requirements.txt  test_client.py  wokwi.toml
.githooks/: pre-push
.github/: avisar-qa.yml
.github/workflows/: testes.yml
audio_processor/: config.py  main.py  output_message_type.py  pcm_buffer.py  pyproject.toml
audio_processor/models/: vosk_speech_model.py
audio_processor/services/: base_service.py  gateway_service.py
audio_processor/src/audio_processor/: command_recognizer.py  config.py  main.py  output_message_type.py  test_command_recognizer.py  test_pcm_buffer.py
audio_processor/src/audio_processor/models/: base_speech_model.py
audio_processor/src/audio_processor/services/: audio_processor_service.py  ffmpeg_stream_service.py  gateway_service.py  http_server_service.py  pcm_stream_service.py
audio_processor/test/audio_processor/: test_command_recognizer.py  test_pcm_buffer.py  test_pcm_stream_service.py
main/: CMakeLists.txt  audio_interface.h  audio_mock.c  audio_platform.c  main.c
scripts/: docker.sh  setup-git-hooks.sh  stream_microphone.sh  websocket_listener.py
