[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio_processor"
version = "0.1.0"
description = "A real-time audio processing and streaming pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "Levenshtein>=0.27.3"
]

[tool.hatch.build.targets.wheel]
packages = ["audio_processor"]

[tool.setuptools.packages.find]
where = ["src"]
