[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_processor"
version = "0.1.0"
description = "A real-time audio processing and streaming pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "Levenshtein>=0.27.3",
    "aiohttp>=3.14.1",
]

[tool.setuptools.packages.find]
where = ["src"]
